--- a/index.html
+++ b/index.html
@@ -1,234 +1,95 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Gatlin Johnson</title>
-            <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-            <!--[if lt IE 9]>
-              <script
-                  src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/docs.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-    </head>
-    <body data-spy="scroll" data-targe=".subnav">
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse"
-                        data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <div class="nav-collapse">
-                        <ul class="nav">
-                            <li><a
-                                href="mailto:gatlin@niltag.net">gatlin@niltag.net</a></li>
-                            <li><a
-                                href="https://github.com/gatlin">GitHub</a></li>
-                            <li><a
-                                href="https://twitter.com/gatlin">twitter</a></li>
-                            <li><a
-                                href="http://gatlin.tumblr.com">tumblr</a></li>
-                            <li><a
-                                href="http://instagram.com/gatlincj">Instagram</a></li>
-                            <!--
-                            <li><a
-                                href="https://flattr.com/profile/gatlin">Flattr</a></li>
-                            -->
-                            <li><a
-                                href="https://www.gittip.com/gatlin/">Gittip</a></li>
-                            <li><a
-                                href="http://www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Gatlin Johnson</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
+
+    <!-- glyphicons -->
+    <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div class="container-narrow">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li>
+          <a href="mailto:gatlin@niltag.net">
+              <span class="glyphicon glyphicon-envelope"></span>
+              Send me an email!</a></li>
+          <li>
+            <a href="gatlin.gpg">PGP</a>
+          </li>
+        </ul>
+        <h3 class="text-muted">
+            <em>"Veni veni veni"</em>
+        </h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1>Gatlin Johnson</h1>
+        <p><img src="img/gatlin.jpg" class="img-thumbnail"></p>
+        <p class="lead">
+            Software developer, pug fanatic.
+        </p>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Stalk me on GitHub!</h4>
+          <p>
+          Take a gander at <a href="https://github.com/gatlin">my open source
+              projects</a> on GitHub.
+          </p>
+
+          <h4>Pursue me on tumblr!</h4>
+          <p>
+            <a href="http://gatlin.tumblr.com">I really hope you like pugs.</a>
+          </p>
+
+          <h4>Send me a boring old email.</h4>
+          <p>
+            Drop me a line at
+            <a href="mailto:gatlin@niltag.net">
+                gatlin@niltag.net</a>
+          </p>
         </div>
-        <div class="container"
-            itemscope
-            itemtype="http://data-vocabulary.org/Person"
-        >
-            <header class="jumbotron subhead" id="overview">
-                <div class="row">
-                    <div class="span6">
-                        <h1 itemprop="fn">Gatlin Johnson</h1>
-                        <p class="lead"
-                        itemprop="role">software developer, pug fanatic</p>
-                    </div>
-                </div>
 
-                <div class="subnav">
-                    <ul class="nav nav-pills">
-                        <li><a href="#summary">Summary</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#links">Other links</a></li>
-                    </ul>
-                </div>
-            </header>
+        <div class="col-lg-6">
+          <h4>Ogle me on Twitter!</h4>
+          <blockquote>
+              <p>For the most part people are not curious except about
+              themselves.</p>
+            <cite>John Steinbeck</cite>
+          </blockquote>
 
-            <section id="summary">
-                <div class="page-header">
-                    <h2>Summary</h2>
-                </div>
+          But enough with the foreplay:
+          <a href="https://twitter.com/gatlin">@gatlin</a>
 
-                <div class="row">
-                    <div class="span12">
-                        <div
-                            class="media well">
-                            <div class="pull-left">
-                                <img src="img/gatlin.jpg"
-                                     itemprop="photo"
-                                     class="hidden-phone">
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading"
-                                    itemprop="summary"
-                                    >There's not much to it.</h3>
-                                <span itemprop="description">
-                                <p>
-                                    I'm a software developer in sunny Austin, TX.
-                                    Graduated from UT with my BS in Computer Science. I
-                                    do freelance development and aspire to hide in
-                                    academia some day. My interests include programming
-                                    languages, formal logic, vodka.
-                                </p>
-
-                                <p>
-                                    I live in and support <a
-                                        href="http://lareunioncoop.org" target="_blank"
-                                        >cooperatives</a>, daydream excessively,
-                                    and watch a lot of bad movies.
-                                </p>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="contact">
-                <div class="page-header">
-                    <h2>Contact me</h2>
-                </div>
-                <address>
-                <div class="row">
-                    <div class="span3 well">
-                        <h3>Email</h3>
-                        <p>
-                            <a
-                                href="mailto:gatlin@niltag.net">gatlin@niltag.net</a>
-                        </p>
-                    </div>
-                    <div class="span3 well">
-                        <h3>XMPP</h3>
-                        <p>gatlin@niltag.net</p>
-                    </div>
-                    <div class="span3 well">
-                        <h3>Twitter</h3>
-                        <p>
-                            <a
-                                href="https://twitter.com/gatlin">@gatlin</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="span3 well">
-                        <h3>Tumblr</h3>
-                        <p>
-                            <a
-                                href="http://gatlin.tumblr.com">
-                                My fascinating blog</a>
-                        </p>
-                    </div>
-                    <div class="span3 well">
-                        <h3>Instagram</h3>
-                        <p>
-                            <a
-                                href="http://instagram.com/gatlincj">
-                                @gatlincj</a>
-                        </p>
-                    </div>
-                    <div class="span3 well">
-                        <h3>GitHub</h3>
-                        <p>
-                            <a
-                                href="https://github.com/gatlin">
-                                @gatlin</a>
-                        </p>
-                    </div>
-                </div>
-            </address>
-            </section>
-
-            <section id="links">
-                <div class="page-header">
-                    <h2>Other things I care about</h2>
-                    <p class="lead">I'm not completely dead inside.</p>
-                </div>
-
-                <div class="row">
-                    <div class="span6">
-                        <h4><a href="http://lareunioncoop.org">The cooperative
-                                house I co-founded!</a></h4>
-                        <p>Seriously, with help from NASCO Properties my
-                        friends and I <strike>are about to create</strike> have
-                        created a NEW group-equity
-                        housing cooperative in Austin, TX. Visit the wiki to
-                        find out more!</p>
-                    </div>
-                    <div class="span6">
-                        <h4><a href="http://lacyrosemusic.com">Lacy Rose
-                                music</a></h4>
-                        <p>My friend Lacy Rose is a pianist, singer,
-                        and burgeoning composer of ghost music.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="span6">
-
-                        <h4><a href="http://nasco.coop">NASCO</a></h4>
-                        <p>Cooperation and cooperative living are great
-                        solutions to a
-                        lot of problems. This website can tell you a lot
-                        more!</p>
-
-                    </div>
-                </div>
-            </section>
-
-            <footer class="footer">
-                <p class="pull-right"><a href="#">Back to top</a></p>
-            </footer>
+          <h4>Tail me on Instagram!</h4>
+          <p>
+            I'm a bit upset I couldn't swing my name
+            <a href="https://instagram.com/gatlincj">but @gatlincj wil do.</a>
+          </p>
         </div>
-        <script
-            src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script type='text/javascript'>
-            // fix sub nav on scroll
-            var $win = $(window)
-              , $nav = $('.subnav')
-              , navHeight = $('.navbar').first().height()
-              , navTop = $('.subnav').length && $('.subnav').offset().top -
-              navHeight
-              , isFixed = 0
+      </div>
 
-            processScroll()
+      <div class="footer">
+        <p>&copy; 2013. Theme lovingly stolen from other people.</p>
+      </div>
 
-            $win.on('scroll', processScroll)
+    </div> <!-- /container -->
 
-            function processScroll() {
-              var i, scrollTop = $win.scrollTop()
-              if (scrollTop >= navTop && !isFixed) {
-                isFixed = 1
-                $nav.addClass('subnav-fixed')
-              } else if (scrollTop <= navTop && isFixed) {
-                isFixed = 0
-                $nav.removeClass('subnav-fixed')
-              }
-            }
-        </script>
-    </body>
+  </body>
 </html>
+
