--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </li>
         </ul>
         <h3 class="text-muted">
-            <em>"Veni veni veni"</em>
+            <em>Veni veni veni</em>
         </h3>
       </div>
 
