--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container-narrow">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
+        <ul class="nav nav-pills pull-right clearfix hidden-xs">
           <li>
           <a href="mailto:gatlin@niltag.net">
               <span class="glyphicon glyphicon-envelope"></span>
@@ -35,13 +35,21 @@
             <em>Veni veni veni</em>
         </h3>
       </div>
-
       <div class="jumbotron">
         <h1>Gatlin Johnson</h1>
         <p><img src="img/gatlin.jpg" class="img-thumbnail"></p>
         <p class="lead">
             Software developer, pug fanatic.
         </p>
+        <ul class="list-group visible-xs">
+          <li class="list-group-item">
+          <a href="mailto:gatlin@niltag.net">Send me an email!</a>
+          </li>
+          <li class="list-group-item">
+          <a href="gatlin.gpg">
+              PGP
+          </a>
+          </li>
       </div>
 
       <div class="row marketing">
