funny subject line

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
         <ul class="list-group visible-xs">
           <li class="list-group-item">
-          <a href="mailto:gatlin@niltag.net">Send me an email!</a>
+          <a href="mailto:gatlin@niltag.net?subject=Hey there handsome">Send me an email!</a>
           </li>
           <li class="list-group-item">
           <a href="gatlin.gpg">
