--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h4>Tail me on Instagram!</h4>
           <p>
             I'm a bit upset I couldn't swing my name
-            <a href="https://instagram.com/gatlincj">but @gatlincj wil do.</a>
+            <a href="https://instagram.com/gatlincj">but @gatlincj will do.</a>
           </p>
         </div>
       </div>
