--- a/billing/thankyou.html
+++ b/billing/thankyou.html
@@ -10,7 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/2bdeec7b.main.css"/>
+        <link rel="stylesheet" href="styles/bootstrap.min.css"/>
+        <link rel="stylesheet" href="styles/jumbotron-narrow.css"/>
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
     </head>
     <body>
