--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p class="lead">
             Software developer, pug fanatic.
         </p>
+        </p>
         <ul class="list-group visible-xs">
           <li class="list-group-item">
           <a href="mailto:gatlin@niltag.net?subject=Hey there handsome">Send me an email!</a>
@@ -50,6 +51,12 @@
               PGP
           </a>
           </li>
+      </div>
+
+      <div class="jumbotron">
+          <div class="col-lg-12">
+              <h4><a href="doge.html">Tip me in dogecoin!</a></h4>
+          </div>
       </div>
 
       <div class="row marketing">
