--- a/billing/index.html
+++ b/billing/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>web</title>
+        <title>Billing</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,7 +21,7 @@
         <![endif]-->
 
 
-        <div class="container-narrow">
+        <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><a href="http://niltag.net">Home</a></li>
