--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
 
     <!-- glyphicons -->
     <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
+
+    <style type="text/css">
+        .jumbotron {
+            border: 1px solid #E5E5E5;
+        }
+
+        .jumbotron h1 {
+            font-size: 64pt;
+        }
+
+        .jumbotron p.lead {
+            font-size: 30pt;
+        }
+    </style>
   </head>
 
   <body>
 
-    <div class="container-narrow">
+    <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right clearfix hidden-xs">
           <li>
@@ -51,12 +65,6 @@
               PGP
           </a>
           </li>
-      </div>
-
-      <div class="jumbotron">
-          <div class="col-lg-12">
-              <h4><a href="doge.html">Tip me in dogecoin!</a></h4>
-          </div>
       </div>
 
       <div class="row marketing">
@@ -100,7 +108,7 @@
       </div>
 
       <div class="footer">
-        <p>&copy; 2013. Theme lovingly stolen from other people.</p>
+        <p>&copy; 2013-2014. Theme lovingly stolen from other people.</p>
       </div>
 
     </div> <!-- /container -->
