removed dogecoin link, new theme

--- a/doge.html
+++ b/doge.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <div class="container-narrow">
+    <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right clearfix hidden-xs">
           <li>
