added an essays section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               PGP
           </a>
           </li>
+      </ul>
       </div>
 
       <div class="row marketing">
@@ -86,9 +87,6 @@
             <a href="mailto:gatlin@niltag.net">
                 gatlin@niltag.net</a>
           </p>
-        </div>
-
-        <div class="col-lg-6">
           <h4>Ogle me on Twitter!</h4>
           <blockquote>
               <p>For the most part people are not curious except about
@@ -104,6 +102,17 @@
             I'm a bit upset I couldn't swing my name
             <a href="https://instagram.com/gatlincj">but @gatlincj will do.</a>
           </p>
+        </div>
+        <div class="col-lg-6">
+            <h4>Essays</h4>
+            <p>
+                I occasionally talk to myself in writing. Currently working on
+                posting more of it here. Mostly going to be computer science
+                essays.</p>
+            <h4>Tip me in Dogecoin!</h4>
+            <p>
+                <a href="doge.html">Or don't, it's your call.</a>
+                </p>
         </div>
       </div>
 
