helps to link to it

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         <div class="col-lg-6">
             <h4>Essays</h4>
             <p>
-                I occasionally talk to myself in writing. Currently working on
+            I occasionally <a href="/essays/">
+                talk to myself in writing.</a> Currently working on
                 posting more of it here. Mostly going to be computer science
                 essays.</p>
             <h4>Tip me in Dogecoin!</h4>
