syntax highlighting, added boolean essay

--- a/essays/index.html
+++ b/essays/index.html
@@ -61,6 +61,13 @@
                           functional languages.</a></h3>
               </div>
 
+              <div class="link-block">
+                  <h3><a href="booleans.html">
+                          Wherein I demonstrate how to create your own Boolean
+                          data types and if-statement syntax in
+                          Racket.</a></h3>
+              </div>
+
           </div>
       </div><!-- row -->
 
