church numerals and billing system, deleted swap files, tweaked the index page

--- a/essays/index.html
+++ b/essays/index.html
@@ -48,6 +48,7 @@
       </div>
 
       <div class="row">
+          <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
                   <h3><a href="monads.html">
@@ -62,12 +63,25 @@
               </div>
 
               <div class="link-block">
+                  <h3><a href="church.html">
+                          Wherein I construct arithmetic from the lambda
+                          calculus and thus prove it can calculate anything
+                          which can be calculated, and yet still miss my rent
+                          deadline.</a></h3>
+              </div>
+
+              <div class="link-block">
                   <h3><a href="booleans.html">
                           Wherein I demonstrate how to create your own Boolean
                           data types and if-statement syntax in
                           Racket.</a></h3>
               </div>
-
+              <div class="link-block">
+                  <h3><a href="billing.html">
+                          Wherein I build a billing system for myself in
+                          Haskell using Stripe and Heroku
+                  </a></h3>
+              </div>
           </div>
       </div><!-- row -->
 
