added link to billing page

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
             <p>
                 <a href="doge.html">Or don't, it's your call.</a>
                 </p>
+
+            <h4>Owe me money? Pay up!</h4>
+            <p>
+                <a href="/billing">My billing system is fully operational.</a>
+                </p>
         </div>
       </div>
 
