added 'old' essay

--- a/essays/index.html
+++ b/essays/index.html
@@ -85,6 +85,17 @@
           </div>
       </div><!-- row -->
 
+      <div class="row">
+          <h2 class="section-header">Other</h2>
+          <div class="col-md-12 col-lg-8 col-offset-lg-2">
+              <div class="link-block">
+                  <h3><a href="old.html">
+                          I am old
+                  </a></h3>
+              </div>
+          </div>
+      </div>
+
       <hr>
 
       <div class="footer">
