--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
                 talk to myself in writing.</a> Currently working on
                 posting more of it here. Mostly going to be computer science
                 essays.</p>
+            <h4>psilo</h4>
+            <p>
+            I'm writing a <a href="/psilo">really cool programming
+                language!</a> psilo should be interesting on its own, and I've
+            <a href="/psilo/src">
+                annotated the source code</a> to demonstrate some clever parsing and
+            compiling techniques.</p>
+
             <h4>Tip me in Dogecoin!</h4>
             <p>
                 <a href="doge.html">Or don't, it's your call.</a>
