fixed broken link

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <p>
             I'm writing a <a href="/psilo">really cool programming
                 language!</a> psilo should be interesting on its own, and I've
-            <a href="/psilo/src">
-                annotated the source code</a> to demonstrate some clever parsing and
+            annotated the source code and formatted it for viewing in a browser
+            to demonstrate some clever parsing and
             compiling techniques.</p>
 
             <h4>Tip me in Dogecoin!</h4>
