added to essays

--- a/essays/index.html
+++ b/essays/index.html
@@ -50,6 +50,14 @@
       <div class="row">
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
+
+              <div class="link-block">
+                  <h3><a href="free_monad_adt.html">
+                          Wherein I define functors using only algebraic data
+                          types - not type classes - and proceed to derive free
+                          monads from them.</a></h3>
+              </div>
+
               <div class="link-block">
                   <h3><a href="monads.html">
                           Wherein I offer my unsolicited, probably incorrect
