--- a/essays/free_monad_adt.html
+++ b/essays/free_monad_adt.html
@@ -63,8 +63,8 @@ code > span.er { font-weight: bold; }
         <h1>
             How to add imperative programming to a pure functional language
         </h1>
-        <p class="lead">Or: creating a disciplined Python</p>
-      </div>
+        <p class="lead">Or: a cure for insomnia.</p>
+        </div>
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
 
