--- a/essays/free_monad_adt.html
+++ b/essays/free_monad_adt.html
@@ -61,7 +61,7 @@ code > span.er { font-weight: bold; }
       </ol>
       <div class="page-header col-md-12 col-lg-10 col-lg-offset-1">
         <h1>
-            How to add imperative programming to a pure functional language
+            Deriving free monads from value level functors.
         </h1>
         <p class="lead">Or: a cure for insomnia.</p>
         </div>
@@ -69,7 +69,6 @@ code > span.er { font-weight: bold; }
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
 
 
-<h1 id="deriving-free-monads-from-value-level-functors">Deriving free monads from value-level functors</h1>
 <p>This might be the least interesting article title on the Internet. However, it is something I have been looking into as I work on my language, <a href="http://niltag.net/psilo">psilo</a>.</p>
 <p>So I have a few overlapping concerns:</p>
 <ol type="1">
