okay enough for today

--- a/essays/booleans.html
+++ b/essays/booleans.html
@@ -20,6 +20,12 @@ How to create your own Boolean data types and if-statements ... in Racket!
     <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
+    <style type="text/css">
+
+        div#toc-wrapper ul, div#toc-wrapper ol {
+            list-style: none;
+        }
+    </style>
   </head>
 
   <body>
@@ -54,7 +60,17 @@ How to create your own Boolean data types and if-statements ... in Racket!
         <p class="lead">
 Or, On the appreciation of conditional love
         </p>
+<div id="toc-wrapper">
+<h2>Contents</h2>
+<ul>
+<li><a href="#creating-the-data-type"><span class="toc-section-number">0.1</span> Creating the data type</a></li>
+<li><a href="#boolean-operators"><span class="toc-section-number">0.2</span> Boolean operators</a></li>
+<li><a href="#if-expressions"><span class="toc-section-number">0.3</span> <code>if</code> expressions</a></li>
+<li><a href="#epilogue"><span class="toc-section-number">0.4</span> Epilogue</a></li>
+</ul>
+</div>
         </div>
+
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
 <p>Let's say you had a programming language that didn't support Boolean values, Boolean operators, or <code>if</code> syntax natively. What would you do?</p>
