--- a/essays/index.html
+++ b/essays/index.html
@@ -52,6 +52,12 @@
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
 
               <div class="link-block">
+                  <h3><a href="recursion.html">
+                          Wherein I explain recursion, or, you really should
+                          try reading Finnegan's Wake.</a></h3>
+              </div>
+
+              <div class="link-block">
                   <h3><a href="free_monad_adt.html">
                           Wherein I define functors using only algebraic data
                           types - not type classes - and proceed to derive free
