racket monads essay

--- a/essays/index.html
+++ b/essays/index.html
@@ -52,9 +52,10 @@
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
 
               <div class="link-block">
-                  <h3><a href="recursion.html">
-                          Wherein I explain recursion, or, you really should
-                          try reading Finnegan's Wake.</a></h3>
+                  <h3><a href="racket_monad.html">
+                          Wherein I motivate, define, and use monads in Typed
+                          Racket and finish off an entire bottle of pinot
+                          grigio with my roommate's cat.</a></h3>
               </div>
 
               <div class="link-block">
