--- a/essays/index.html
+++ b/essays/index.html
@@ -59,6 +59,13 @@
               </div>
 
               <div class="link-block">
+                  <h3><a href="recursion.md">
+                          Wherein I describe what recursion is and make a
+                          number of startingly profound ideas sound vulgar and
+                          idiotic</a></h3>
+              </div>
+
+              <div class="link-block">
                   <h3><a href="free_monad_adt.html">
                           Wherein I define functors using only algebraic data
                           types - not type classes - and proceed to derive free
