--- a/essays/index.html
+++ b/essays/index.html
@@ -59,7 +59,7 @@
               </div>
 
               <div class="link-block">
-                  <h3><a href="recursion.md">
+                  <h3><a href="recursion.html">
                           Wherein I describe what recursion is and make a
                           number of startingly profound ideas sound vulgar and
                           idiotic</a></h3>
