adding link to gists

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
           <h4>Stalk me on GitHub!</h4>
           <p>
           Take a gander at <a href="https://github.com/gatlin">my open source
-              projects</a> on GitHub.
+              projects</a> on GitHub. I also frequently write interesting
+          little one-off pieces <a href="https://gist.github.com/gatlin">as
+              gists, which you may find illuminating</a>.
           </p>
 
           <h4>Pursue me on tumblr!</h4>
