why does the index keep getting clobbered

--- a/essays/index.html
+++ b/essays/index.html
@@ -52,6 +52,13 @@
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
 
               <div class="link-block">
+                  <h3><a href="racket_monad.html">
+                          Wherein I motivate, define, and demonstrate monads in
+                          Typed Racket while finishing a bottle of pinot grigio
+                          with my roommate's cat.</a></h3>
+              </div>
+
+              <div class="link-block">
                   <h3><a href="free_monad_adt.html">
                           Wherein I define functors using only algebraic data
                           types - not type classes - and proceed to derive free
