--- a/essays/index.html
+++ b/essays/index.html
@@ -50,6 +50,14 @@
       <div class="row">
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
+              <div class="link-block">
+                  <h3><a href="racket_monad.html">
+                          Wherein I motivate, define, and implement monads in
+                          Typed Racket to demonstrate that they aren't scary,
+                          while I simultaneously polish off a bottle of pinot
+                          grigio with my roommate's cat.
+                      </a></h3>
+              </div>
 
               <div class="link-block">
                   <h3><a href="free_monad_adt.html">
