added link to recursion article

--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -51,6 +51,13 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="recursion.html">
+                          Wherein I define recursion from the λ calculus
+                          without using explicit names and somehow ended up
+                          writing Finnegan's Wake.
+                      </a></h3>
+              </div>
+              <div class="link-block">
                   <h3><a href="racket_monad.html">
                           Wherein I motivate, define, and implement monads in
                           Typed Racket to demonstrate that they aren't scary,
