--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -51,6 +51,13 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
+                  <h3><a href="loeb.html">
+                          Wherein I use Löb's theorem to compute inverted
+                          fixpoints and end up recreating a lame version of
+                          Excel, accepting my mortality in a healthy way.
+                      </a></h3>
+              </div>
+              <div class="link-block">
                   <h3><a href="recursion.html">
                           Wherein I define recursion from the λ calculus
                           without using explicit names and somehow ended up
