--- a/essays/zipper.html
+++ b/essays/zipper.html
@@ -90,7 +90,7 @@ Or, I may have finally gone insane
         </div>
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
-<p>I've written previously about Löb's theorem and the curious manner in which we can evaluate a list of functions which depend on each other's outputs <em>simultaneously</em> without much fuss, like a shitty one-row spreadsheet.</p>
+<p>I've written <a href="http://niltag.net/essays/loeb.html">previously</a> about Löb's theorem and the curious manner in which we can evaluate a list of functions which depend on each other's outputs <em>simultaneously</em> without much fuss, like a shitty one-row spreadsheet.</p>
 <p>Today I am going to get inter-dimensional.</p>
 <p>Well, two-dimensional. But I am going to ... <em>Excel</em> at it.</p>
 <figure>
