--- a/conway.html
+++ b/conway.html
@@ -53,8 +53,34 @@
         </h3>
       </div>
       <div class="jumbotron">
+          <form class="form-inline">
+              <div class="form-group">
+                  <select name="picker" id="picker"
+                      >
+                      <option selected="selected">Choose an experiment </option>
+                      <option value="0">Experiment 0</option>
+                      <option value="1">Experiment 1</option>
+                      <option value="2">Experiment 2</option>
+                      <option value="3">Experiment 3</option>
+                      <option value="4">Experiment 4</option>
+                      <option value="5">Experiment 5</option>
+                      <option value="6">Experiment 6</option>
+                      <option value="7">Experiment 7</option>
+                      <option value="8">Experiment 8</option>
+                      <option value="9">Experiment 9</option>
+                      <option value="10">Experiment 10</option>
+                      <option value="11">Experiment 11</option>
+                      <option value="12">Experiment 12</option>
+                      <option value="13">Experiment 13</option>
+                      <option value="14">Experiment 14</option>
+                      <option value="15">Experiment 15</option>
+                  </select>
+              </div>
+          </form>
         <canvas id="game-of-comonads"></canvas>
       </div>
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/game-of-comonads.js"></script>
   </body>
 </html>
