--- a/conway.html
+++ b/conway.html
@@ -74,6 +74,7 @@
                       <option value="13">Experiment 13</option>
                       <option value="14">Experiment 14</option>
                       <option value="15">Experiment 15</option>
+                      <option value="16">Experiment 16</option>
                   </select>
               </div>
           </form>
