--- a/conway.html
+++ b/conway.html
@@ -75,6 +75,7 @@
                       <option value="14">Experiment 14</option>
                       <option value="15">Experiment 15</option>
                       <option value="16">Experiment 16</option>
+                      <option value="17">Experiment 17</option>
                   </select>
               </div>
           </form>
