--- a/conway.html
+++ b/conway.html
@@ -76,6 +76,9 @@
                       <option value="15">Experiment 15</option>
                       <option value="16">Experiment 16</option>
                       <option value="17">Experiment 17</option>
+                      <option value="18">Experiment 18</option>
+                      <option value="19">Experiment 19</option>
+                      <option value="20">Experiment 20</option>
                   </select>
               </div>
           </form>
