--- a/conway.html
+++ b/conway.html
@@ -79,6 +79,12 @@
                       <option value="18">Experiment 18</option>
                       <option value="19">Experiment 19</option>
                       <option value="20">Experiment 20</option>
+                      <option value="21">Experiment 21</option>
+                      <option value="22">Experiment 22</option>
+                      <option value="23">Experiment 23</option>
+                      <option value="24">Experiment 24</option>
+                      <option value="25">Experiment 25</option>
+                      <option value="26">Experiment 26</option>
                   </select>
               </div>
           </form>
