--- a/conway.html
+++ b/conway.html
@@ -85,6 +85,7 @@
                       <option value="24">Experiment 24</option>
                       <option value="25">Experiment 25</option>
                       <option value="26">Experiment 26</option>
+                      <option value="27">Experiment 27</option>
                   </select>
               </div>
           </form>
