--- a/conway.html
+++ b/conway.html
@@ -86,6 +86,7 @@
                       <option value="25">Experiment 25</option>
                       <option value="26">Experiment 26</option>
                       <option value="27">Experiment 27</option>
+                      <option value="28">Experiment 28</option>
                   </select>
               </div>
           </form>
