--- a/conway.html
+++ b/conway.html
@@ -87,6 +87,7 @@
                       <option value="26">Experiment 26</option>
                       <option value="27">Experiment 27</option>
                       <option value="28">Experiment 28</option>
+                      <option value="29">Experiment 29</option>
                   </select>
               </div>
           </form>
