new font, some changes to essay templates

--- a/essays/monads.html
+++ b/essays/monads.html
@@ -10,6 +10,11 @@
 An example-driven explication of monads written on vyvanse
 | Gatlin Johnson</title>
 
+    <!-- Merriweather font -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
