--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <title>Gatlin Johnson</title>
 
+    <!-- Merriweather font -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -96,8 +101,9 @@
             <cite>John Steinbeck</cite>
           </blockquote>
 
-          But enough with the foreplay:
-          <a href="https://twitter.com/gatlin">@gatlin</a>
+          <p>But enough with the foreplay:
+            <a href="https://twitter.com/gatlin">@gatlin</a>
+          </p>
 
           <h4>Tail me on Instagram!</h4>
           <p>
