--- a/essays/billing.html
+++ b/essays/billing.html
@@ -10,6 +10,11 @@
 Writing a billing system in Haskell, using Stripe and Heroku
 | Gatlin Johnson</title>
 
+    <!-- Merriweather font -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
