--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -8,6 +8,11 @@
 
     <title>Essays | Gatlin Johnson</title>
 
+    <!-- Merriweather font -->
+    <link rel="stylesheet"
+          type="text/css"
+          href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
