until I make more progress with psilo, I'm showcasing tubes

--- a/index.html
+++ b/index.html
@@ -118,13 +118,24 @@
                 talk to myself in writing.</a> Currently working on
                 posting more of it here. Mostly going to be computer science
                 essays.</p>
-            <h4>psilo</h4>
+            <h4>tubes</h4>
             <p>
-            I'm writing a <a href="/psilo">really cool programming
-                language!</a> psilo should be interesting on its own, and I've
-            annotated the source code and formatted it for viewing in a browser
-            to demonstrate some clever parsing and
-            compiling techniques.</p>
+            I've been working on a stream-processing library for Haskell,
+            called <a
+                              href=http://hackage.haskell.org/package/tubes">tubes</a>.
+            Using two new commands, <em>yield</em> and
+            <em>await</em>, you
+            can write reusable processing units called "tubes" and then connect
+            them into arbitrary <a
+                              href="https://en.wikipedia.org/wiki/Series_of_tubes">series</a> 
+            </p><p>
+            This style of programming is quite useful in a variety of domains,
+            and part of some long term efforts of mine.
+
+            The <a
+                              href="http://hackage.haskell.org/package/tubes">documentation</a>
+            has examples and more information.
+            </p>
 
             <h4>Tip me in Dogecoin!</h4>
             <p>
