--- a/almtest/index.html
+++ b/almtest/index.html
@@ -17,20 +17,67 @@ body {
     background: #eaeaea;
 }
 
-h1 {
-    text-align: center;
+#main {
+    width: 550px;
+    position: relative;
+    margin: 130px 0 40px 0;
 }
 
 #the_app {
+    padding-top: 15px;
     background: #fff;
     background: rgba(255, 255, 255, 0.9);
-    margin: 130px 0 40px 0;
     border: 1px solid #ccc;
     position: relative;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2),
                 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+#the_app:before {
+    content: '';
+    border-left: 1px solid #f5d6d6;
+    border-right: 1px solid #f5d6d6;
+    width: 2px;
+    position: absolute;
+    top: 0;
+    left: 40px;
+    height: 100%;
+}
+
+/* Buttons and input */
+
+input#field, .edit {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    font-size: 24px;
+    font-family: inherit;
+    line-height: 1.4em;
+    border: 0;
+    outline: none;
+    color: #4d4d4d;
+    padding: 6px;
+    border: 1px solid #999;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -ms-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+}
+
+input#field {
+    padding: 16px 16px 16px 60px;
+    border: none;
+    background: rgba(0, 0, 0, 0.02);
+    z-index: 2;
+    box-shadow: none;
 }
 
 button, input[type="checkbox"] {
@@ -79,40 +126,9 @@ button.delete_button:hover {
     transform: scale(1.3);
 }
 
+/* Task list style */
 li.task:hover .delete_button {
     display: block;
-}
-
-input#field, .edit {
-    position: relative;
-    margin: 0;
-    width: 100%;
-    font-size: 24px;
-    font-family: inherit;
-    line-height: 1.4em;
-    border: 0;
-    outline: none;
-    color: #4d4d4d;
-    padding: 6px;
-    border: 1px solid #999;
-    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    -ms-font-smoothing: antialiased;
-    -o-font-smoothing: antialiased;
-    font-smoothing: antialiased;
-}
-
-input#field {
-    padding: 16px 16px 16px 60px;
-    border: none;
-    background: rgba(0, 0, 0, 0.02);
-    z-index: 2;
-    box-shadow: none;
 }
 
 li.task {
@@ -137,7 +153,7 @@ li.task label {
 
 li.task label.completed {
     color: #a9a9a9;
-    font-weight: italic;
+    font-style: italic;
     text-decoration: line-through;
 }
 
@@ -162,7 +178,7 @@ li.task .editing {
     z-index: 2;
     display: inline-block;
     position: relative;
-    width: 450px;
+    width: 400px;
     padding: 13px 17px 12px 17px;
     margin: 0 0 0 40px;
     font-size: inherit;
@@ -171,7 +187,16 @@ li.task .editing {
 }
 
 #header {
-    padding-top: 15px;
+    text-align: center;
+}
+
+#header h1 {
+    color: #4d4d4d;
+    position:absolute;
+    top: -80px;
+    right: 0;
+    left: 0;
+    font-size: 30px;
 }
 
 #header::before {
@@ -197,16 +222,16 @@ li.task .editing {
 </style>
 </head>
 <body>
-    <div id="the_app">
-        <header id='header'>
-            <h1>Obligatory Todo App</h1>
-        </header>
-        <input type='text'
-               id='field'
-               placeholder='What needs to be done?'></input>
-        <div id='wrapper'>
-
-        </div>
+    <div id="main">
+        <section id="the_app">
+            <header id='header'>
+                <h1>Obligatory Todo App</h1>
+            </header>
+            <input type='text'
+                   id='field'
+                   placeholder='What needs to be done?'></input>
+            <div id='wrapper'></div>
+        </section>
     </div>
     <script src="loeb.js"></script>
     <script src='alm.js'></script>
