--- a/almtest/index.html
+++ b/almtest/index.html
@@ -80,6 +80,25 @@ input#field {
     box-shadow: none;
 }
 
+li.task input.toggle {
+    text-align: center;
+    width: 40px;
+    /* auto, since non-WebKit browsers doesn't support input styling */
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 50px auto 0;
+    padding: 0;
+    /* Mobile Safari */
+    border: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+}
+
+
 button, input[type="checkbox"] {
     outline: none;
 }
@@ -155,23 +174,6 @@ li.task label.completed {
     color: #a9a9a9;
     font-style: italic;
     text-decoration: line-through;
-}
-
-li.task .toggle {
-    text-align: center;
-    width: 40px;
-    /* auto, since non-WebKit browsers doesn't support input styling */
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin: auto 0;
-    /* Mobile Safari */
-    border: none;
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none;
 }
 
 li.task .editing {
