--- a/gainratio/index.html
+++ b/gainratio/index.html
@@ -111,8 +111,8 @@ div#output {
     <body>
         <div id='app_container'>
         </div>
-        <script src='loeb.js'></script>
-        <script src='alm.js'></script>
-        <script src='bike.js'></script>
+        <script src='/loeb.js'></script>
+        <script src='/alm.js'></script>
+        <script src='/example/bike.js'></script>
     </body>
 </html>
