--- a/outreach/index.html
+++ b/outreach/index.html
@@ -192,7 +192,12 @@ Gatlin Johnson
 <div id="questions" class="slide section level1">
 <h1>Questions?</h1>
 <p>Feel free to contact me at <code>outreach@lareunioncoop.org</code>.</p>
-<p>La Reunion Website: http://lareunioncoop.org Sasona Website: http://sasona.org CHEA Website: http://chea.coop NASCO Website: http://nasco.coop</p>
+<ul>
+<li>La Reunion Website: http://lareunioncoop.org</li>
+<li>Sasona Website: http://sasona.org</li>
+<li>CHEA Website: http://chea.coop</li>
+<li>NASCO Website: http://nasco.coop</li>
+</ul>
 </div>
 </body>
 </html>
