--- a/outreach/index.html
+++ b/outreach/index.html
@@ -193,10 +193,10 @@ Gatlin Johnson
 <h1>Questions?</h1>
 <p>Feel free to contact me at <code>outreach@lareunioncoop.org</code>.</p>
 <ul>
-<li>La Reunion Website: http://lareunioncoop.org</li>
-<li>Sasona Website: http://sasona.org</li>
-<li>CHEA Website: http://chea.coop</li>
-<li>NASCO Website: http://nasco.coop</li>
+<li>La Reunion Website: <a href="http://lareunioncoop.org" class="uri">http://lareunioncoop.org</a></li>
+<li>Sasona Website: <a href="http://sasona.org" class="uri">http://sasona.org</a></li>
+<li>CHEA Website: <a href="http://chea.coop" class="uri">http://chea.coop</a></li>
+<li>NASCO Website: <a href="http://nasco.coop" class="uri">http://nasco.coop</a></li>
 </ul>
 </div>
 </body>
