--- a/outreach/index.html
+++ b/outreach/index.html
@@ -186,6 +186,8 @@ Gatlin Johnson
 <li>No assembly of more than 1 person is ever going to be harmonious 24/7</li>
 <li>Cooperation is about <em>how</em> we deal with problems.</li>
 </ul></li>
+<li>Coops exist around the country,</li>
+<li>Every year coopers meet in Ann Arbor, MI to discuss housing, social justice, and other topics of concern for communities.</li>
 <li>&quot;No [person] is an island.&quot; - John Donne</li>
 </ul>
 </div>
