footnotes must come after links in markdown

--- a/essays/index.html
+++ b/essays/index.html
@@ -56,13 +56,6 @@
           <h2 class="section-header">Computer Science</h2>
           <div class="col-md-12 col-lg-8 col-offset-lg-2">
               <div class="link-block">
-                  <h3><a href="church.html">
-                          Wherein I construct my own numbers, arithmetic, and
-                          data structures out of thin air (and lambda calculus)
-                          and proceed to BLOW YOUR MIND.
-                  </a></h3>
-              </div>
-              <div class="link-block">
                   <h3><a href="zipper.html">
                           Wherein I revisit Löb's theorem to compute
                           2-dimensional fixed points and also hide out at a
@@ -111,6 +104,13 @@
                           functional languages.</a></h3>
               </div>
 
+              <div class="link-block">
+                  <h3><a href="church.html">
+                          Wherein I construct arithmetic from the lambda
+                          calculus and thus prove it can calculate anything
+                          which can be calculated, and yet still miss my rent
+                          deadline.</a></h3>
+              </div>
 
               <div class="link-block">
                   <h3><a href="booleans.html">
